# advent_of_code_21

./: Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
day3/src/: main.rs
day4/src/: main.rs
day5/: Cargo.toml
day5/src/: main.rs  main_mine.rs
wordle/: Cargo.toml
wordle/src/: lib.rs  main.rs  old.rs  strategies.rs  wordle_game.rs  wordle_master.rs  wordle_scores.rs
