[workspace]
members = [
    "day1",
    "day2",
    "day3",
    "day4",
    "day5",
    "wordle",
]

[patch.crates-io]
day1 = { path = "day1" }
day2 = { path = "day2" }
day3 = { path = "day3" }
day4 = { path = "day4" }
day5 = { path = "day5" }
wordle = { path = "wordle" }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
